--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	)
 	testCompile (
 		'junit:junit:4.10@jar',
-		'org.mockito:mockito-core:1.8.5@jar'
+		'org.mockito:mockito-core:1.8.5@jar',
+		'org.easytesting:fest-assert:1.4'
 	)
 }
 
