--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ repositories {
 
 dependencies {
 	compile (
-		'com.google.guava:guava:13.0.1@jar'
+		'com.google.guava:guava:13.0.1@jar',
+		'org.mod4j.org.apache.commons:cli:1.0.0'
 	)
 	testCompile (
 		'junit:junit:4.10@jar',
