--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
 	compile (
 		'com.google.guava:guava:13.0.1@jar',
 		'org.mod4j.org.apache.commons:cli:1.0.0',
-		'org.apache.commons:commons-math3:3.2'
+		'org.apache.commons:commons-math3:3.2',
+		'net.sf.scannotation:scannotation:1.0.2'
 	)
 	testCompile (
 		'junit:junit:4.10@jar',
